--- a/src/client/Client.fsproj
+++ b/src/client/Client.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -16,11 +16,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="WebSharper" Version="7.0.6.454-beta5" />
-		<PackageReference Include="WebSharper.FSharp" Version="7.0.6.454-beta5" />
-		<PackageReference Include="WebSharper.FsLexYacc" Version="7.0.0.454-beta5" />
-		<PackageReference Include="WebSharper.MathJS" Version="7.0.6.454-beta5" />
-		<PackageReference Include="WebSharper.UI" Version="7.0.4.454-beta5" />
+		<PackageReference Include="WebSharper" Version="8.0.0.473-beta1" />
+		<PackageReference Include="WebSharper.FSharp" Version="8.0.0.473-beta1" />
+		<PackageReference Include="WebSharper.FsLexYacc" Version="8.0.0.473-beta1" />
+		<PackageReference Include="WebSharper.MathJS" Version="8.0.0.473-beta1" />
+		<PackageReference Include="WebSharper.UI" Version="8.0.0.473-beta1" />
 	</ItemGroup>
 
 	<ItemGroup>
